# Notify2

./: .gitignore  Readme.md
Notify3/: Cargo.toml
Notify3/src/: utils.rs
docs/: python_use.md
notify3/: Cargo.toml
notify3/src/: main.rs  utils.rs
src/: app.py  notify_utils.py  setup.py
src/python_module/: notify.py
