[package]
name = "notify3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
futures = { version = "0.3.*" }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"